<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SkyShard</string>
    <string name="choose">Choose</string>
    <string name="choose_app">Choose App</string>
    <string name="installed_app">Installed App</string>
    <string name="installed_module">Installed Module</string>
    <string name="empty_empty">Empty</string>
    <string name="filter">Filter</string>
    <string name="open_source_path">Open Source</string>
    <string name="xp_setting">Xposed Setting</string>
    <string name="tg_group">Telegram Group</string>
    <string name="fake_location">Fake Location(Preview)</string>
    <string name="real_location">Real Location</string>
    <string name="set_location">Set Fake Location Successfully:%s-%s</string>
    <string name="close_fake_location">Disable FakeLocation</string>
    <string name="close_app_fake_location">Disable FakeLocation for %s</string>
    <string name="close_fake_location_success">Disable FakeLocation for %s Successfully</string>
    <string name="setting">Setting</string>
    <string name="jump_module">Go to Module Manager</string>
    <string name="module_setting">Module Manager</string>
    <string name="enable_xposed">Enable Xposed Framework</string>
    <string name="hider">Hide</string>
    <string name="hide_root">Hide Root</string>
    <string name="hide_xposed">Hide Xposed</string>
    <string name="userRemark">User Remark</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="permission_setting">Setting</string>
    <string name="no_reminders">No Reminders</string>
    <string name="app_stop">Stop Running</string>
    <string name="app_stop_hint">Do you want to stop %s forcibly?</string>
    <string name="is_stop">%s is Stopped</string>
    <string name="app_clear">Clear Data</string>
    <string name="app_clear_hint">Clear Data for %s?</string>
    <string name="app_remove">Uninstall App</string>
    <string name="app_shortcut">Create Shortcut</string>
    <string name="shortcut_name">Shortcut Name</string>
    <string name="try_add_shortcut">Try Added To Desktop</string>
    <string name="add_shortcut_fail_msg">If the addition fails, please go to system settings and open the permission of "create desktop shortcut" for SkyShard</string>
    <string name="install_success">Installed Successfully</string>
    <string name="install_fail">Installed Failed: %s</string>
    <string name="install_fail_no_msg">Installed Failed</string>
    <string name="uninstall_success">Uninstalled Successfully</string>
    <string name="uninstall_fail">Uninstalled Failed</string>
    <string name="uninstall_app">Uninstall App</string>
    <string name="uninstall_app_hint">Uninstall %s, and relevant data will be cleared after uninstallation?</string>
    <string name="uninstall_module">Uninstall Module</string>
    <string name="uninstall_module_hint">Do you want to uninstall this module? It will no longer work after uninstallation?</string>
    <string name="remove_success">Removed Successfully</string>
    <string name="clear_success">Cleared Successfully</string>
    <string name="start_fail">Launched Failed</string>
    <string name="start_in_outside">Start module in outside</string>
    <string name="restart_module">Restart app to apply change</string>
    <string name="cannot_create_shortcut">This desktop does not support creating shortcuts</string>
    <string name="uninstall_module_toast">Please uninstall the xposed module in the Module Manager</string>
    <string name="other">Others</string>
    <string name="daemon_enable">Daemon</string>
    <string name="use_vpn_network">Use VPN Network</string>
    <string name="use_vpn_network_summary">Route traffic through VPN for sandboxed apps (may improve network access)</string>
    <string name="disable_flag_secure">Disable Flag Secure</string>
    <string name="disable_flag_secure_summary">Allow screenshots and screen recording in apps</string>
    <string name="gms_manager">GMS Manager</string>
    <string name="jump_gms">Go to Gms Manager</string>
    <string name="enable_gms">Enable Service</string>
    <string name="enable_gms_hint">Opening Google services can make youtube and other software that strongly rely on Google play services run normally.</string>
    <string name="disable_gms">Disable Service</string>
    <string name="disable_gms_hint">Clear the current Google service environment? Google service data will be cleared.</string>
    <string name="no_gms">Currently, there is no Google service environment on mobile phones.</string>

    <!-- SkyShard additions: per-shard label / freeze / color, backup / restore -->
    <string name="sky_rename">Rename</string>
    <string name="sky_rename_hint">Display name for this shard</string>
    <string name="sky_freeze">Freeze</string>
    <string name="sky_unfreeze">Unfreeze</string>
    <string name="sky_frozen_badge">FROZEN</string>
    <string name="sky_frozen_cannot_launch">This shard is frozen. Unfreeze it to launch.</string>
    <string name="sky_color">Set color</string>
    <string name="sky_color_clear">No color</string>
    <string name="sky_color_blue">Sky</string>
    <string name="sky_color_green">Mint</string>
    <string name="sky_color_amber">Amber</string>
    <string name="sky_color_rose">Rose</string>
    <string name="sky_color_violet">Violet</string>
    <string name="sky_backup">Backup shards (JSON)</string>
    <string name="sky_restore">Restore shards (JSON)</string>
    <string name="sky_backup_ok">Backup written.</string>
    <string name="sky_backup_fail">Backup failed: %s</string>
    <string name="sky_restore_ok">Restored %d shard settings.</string>
    <string name="sky_restore_fail">Restore failed: %s</string>
    <string name="sky_github">Project on GitHub</string>
</resources>
