<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
            android:id="@+id/main_setting"
            android:title="@string/setting"
            app:showAsAction="never" />

    <item
        android:id="@+id/fake_location"
        android:title="@string/fake_location"
        app:showAsAction="never" />

    <item
            android:id="@+id/sky_backup"
            android:title="@string/sky_backup"
            app:showAsAction="never" />

    <item
            android:id="@+id/sky_restore"
            android:title="@string/sky_restore"
            app:showAsAction="never" />

    <item
            android:id="@+id/main_git"
            android:title="@string/sky_github"
            app:showAsAction="never" />
</menu>
